--- a/.github/workflows/eztract.yml
+++ b/.github/workflows/eztract.yml
@@ -6,14 +6,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-          mkdir iso
-          cd iso    
           wget https://osrelease.download.prss.microsoft.com/pr/download/Mariner-2.0-x86_64.iso
-          sudo apt-get install p7zip-full p7zip-rar
-          7z x Mariner-2.0-x86_64.iso
-          cd ../
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add --all
-          git commit -m "uploaded"
-          git push
+          sudo apt-get install isoinfo p7zip-full p7zip-rar
+          mkdir outputfortext
+          isoinfo -i  Mariner-2.0-x86_64.iso -l > outputfortext/Output.txt
+
+     - uses: actions/upload-artifact@v3
+       with:
+        name: output
+        path: outputfortext/
+
+
+
