--- a/.github/workflows/eztract.yml
+++ b/.github/workflows/eztract.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           wget https://osrelease.download.prss.microsoft.com/pr/download/Mariner-2.0-x86_64.iso
-          sudo apt-get install isoinfo p7zip-full p7zip-rar
+          sudo apt-get install genisoimage p7zip-full p7zip-rar
           mkdir outputfortext
           isoinfo -i  Mariner-2.0-x86_64.iso -l > outputfortext/Output.txt
 
